# PrivacyGo-DataCleanRoom

./: .env.multiusers  .env.singleuser  .gitignore  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  repositories.bzl
app/: build.sh
app/conf/: Dockerfile  config.yaml
app/dcr_api/: .gitignore  .hz  BUILD.bazel  Dockerfile  build.sh  go.mod  go.sum  main.go  router.go  router_gen.go
app/dcr_api/biz/dal/: BUILD.bazel  init.go
app/dcr_api/biz/dal/db/: BUILD.bazel  init.go  job.go
app/dcr_api/biz/handler/: BUILD.bazel  health.go
app/dcr_api/biz/handler/job/: BUILD.bazel  job_handler.go
app/dcr_api/biz/model/job/: BUILD.bazel  job.go
app/dcr_api/biz/router/: BUILD.bazel  register.go
app/dcr_api/biz/router/job/: BUILD.bazel  job.go  middleware.go
app/dcr_api/biz/service/: BUILD.bazel  build_service.go  job_service.go  kaniko_service.go
app/dcr_api/idl/: job.thrift
app/dcr_monitor/: .gitignore  BUILD.bazel  Dockerfile  build.sh  go.mod  go.sum  main.go
app/dcr_monitor/client/: BUILD.bazel  hertz.go  k8s.go
app/dcr_monitor/monitor/: BUILD.bazel  instance.go  kaniko.go
app/dcr_tee/: .gitignore  Dockerfile  README.md  build.sh
app/dcr_tee/attestation/: BUILD.bazel  go.mod  main.go
app/dcr_tee/encryption/: BUILD.bazel  go.mod  go.sum  main.go
app/jupyterlab_manatee/: .dockerignore  .gitignore  .yarnrc.yml  Dockerfile  LICENSE  README.md  RELEASE.md  build.sh  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
app/jupyterlab_manatee/jupyter-config/jupyter_server_config.d/: jupyterlab_manatee.json
app/jupyterlab_manatee/jupyterlab_manatee/: __init__.py  handlers.py
app/jupyterlab_manatee/src/: index.ts  jobs.tsx  sidebar.ts  sources.ts
app/jupyterlab_manatee/src/__tests__/: jupyterlab_manatee.spec.ts
app/jupyterlab_manatee/style/: index.css
app/jupyterlab_manatee/ui-tests/: jupyter_server_test_config.py  package.json
app/jupyterlab_manatee/ui-tests/tests/: jupyterlab_manatee.spec.ts
deployment/: deploy.sh
deployment/data-clean-room/: Chart.yaml  config.yaml  deploy.sh  values.yaml
deployment/data-clean-room/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  ingress.yaml  service.yaml
deployment/data-clean-room/templates/tests/: test-connection.yaml
deployment/jupyterhub/: config.yaml  deploy.sh
pkg/: go.mod  go.sum
pkg/cloud/: BUILD.bazel  gcp.go  provider.go
pkg/config/: BUILD.bazel  config.go
pkg/errno/: BUILD.bazel  errno.go
pkg/utils/: BUILD.bazel  constant.go  file.go  k8s.go  resp.go
resources/: .gitignore  apply.sh
resources/gcp/: .terraform.lock.hcl  buckets.tf  cluster.tf  database.tf  iam.tf  identitypool.tf  keys.tf  network.tf  providers.tf  repositories.tf  service_accounts.tf  variables.tf
resources/kubernetes/: .terraform.lock.hcl  namespace.tf  providers.tf  role.tf  secret.tf  service_accounts.tf  variables.tf
