load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "job",
    srcs = [
        "job.go",
        "middleware.go",
    ],
    importpath = "github.com/tiktok-privacy-innovation/PrivacyGo-DataCleanRoom/app/dcr_api/biz/router/job",
    visibility = ["//visibility:public"],
    deps = [
        "//app/dcr_api/biz/handler/job",
        "@com_github_cloudwego_hertz//pkg/app",
        "@com_github_cloudwego_hertz//pkg/app/server",
    ],
)
